--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
     font-family: "Poppins", serif;
     font-style: normal;
-    font-size: 18px;
+    letter-spacing: 1px;
+   
     margin: 0;
     padding: 0;
 }
@@ -55,10 +56,48 @@ section{
     display: block;
     box-sizing: border-box;
     padding: 5px;
+    font-size: 15px;
 }
-.home-layout .home-1 .function{
-    margin-top: 20px;
+.home-layout .home-1 .moto span{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-weight: bold;
+padding: 20px;
 }
+.head{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ .head span{
+    font:bold;
+    font-weight: 700;
+    color: rgb(199, 0, 0);
+}
+
+.home-layout .home-1 .function ul{
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border: 1px solid black; */
+    margin-top: 10px;
+}
+
+.home-layout .home-1 .function ul li{
+    width: 100%;
+    display: flex;
+   font-size: 14px;
+   margin-bottom: 5px;
+   
+}
+.home-layout .home-1 .function ul li div{
+    margin-left: 5px;
+}
+
+
+
+
 .home-layout .home-2 .slide-image{
     width: 100%;
     margin-bottom: 10px;
@@ -84,6 +123,7 @@ section{
 .home-layout .home-3 .principal-block{
     
     margin-bottom: 8px;
+    font-size: 14px;
     padding: 5px;
 }
 .home-layout .home-3 .report{
@@ -92,6 +132,13 @@ section{
     box-sizing: border-box;
     padding: 7px 2px;  
 }
+.home-layout .home-3 .report .report-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
 section{
     display: none;
 }
@@ -104,7 +151,7 @@ section.active{
 }  
 #about h5{
     width: 100%;
-    text-align: end;
+    text-align: start;
     font-size: 15px;
     margin-bottom: 12px;
 }
@@ -115,7 +162,7 @@ section.active{
     padding: 15px;
     display: block;
     justify-content: center;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
 }
 #about .yrc-head{
     color:rgb(207, 23, 23) ;
@@ -161,6 +208,30 @@ section.active{
     width: 100%;
     height: 50%;
 }
+#organization ul li{color: rgb(151, 81, 81); font-weight: bold;}
+#organization p{
+    font-size: 18px;
+    margin-bottom: 8px;
+}
+#organization .yrc-song p{
+    padding:8px 0px 0px 50px;
+}
+#principles , #organization{
+    margin:20px;
+    padding: 10px;
+}
+#principles .principles-1{
+    text-align: justify;
+    text-indent: 50px;
+    margin-bottom: 20px;
+}
+#principles .principles-2 p{
+    margin-bottom: 10px;
+    color: blue;
+}
+#principles .principles-2 span{
+    font-weight: bold;
+}
 /*Footer and contact*/
 .cont-info{
     margin:10px 0px;
@@ -168,7 +239,7 @@ section.active{
     color: black;
     text-align: center;
     padding: 20px 10px;
-    width: 100%;
+    
 }
 .cont-info h1{
     font-size: 1.25em;
@@ -177,6 +248,8 @@ section.active{
 .footer{
     text-align: center;
 }
+
+
 
 
 
